--- a/front-end/css/index.css
+++ b/front-end/css/index.css
@@ -1,3 +1,63 @@
+* {
+  margin: 0;
+  padding: 0;
+  border: 0; }
 
+html, body {
+  width: 100%;
+  height: 100%; }
+
+body {
+  font-family: "Helvetica Neue",sans-serif;
+  background: #f9fafb; }
+
+.globalContainer {
+  position: absolute;
+  left: 20%;
+  top: 0;
+  z-index: 0;
+  width: 60%;
+  height: 100%; }
+
+.info-bar {
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 1;
+  width: 20%;
+  height: 100%; }
+
+.search-bar {
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 1;
+  width: 20%;
+  height: 100%; }
+
+table {
+  width: 100%;
+  border-spacing: 0px;
+  color: #334e5f;
+  font-weight: 300; }
+  table td {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    padding: 0.5em !important;
+    border-right: 1px solid rgba(192, 204, 213, 0.5); }
+  table tr:nth-of-type(even) {
+    background: #f9fafb; }
+  table tr:nth-of-type(odd) {
+    background: rgba(157, 177, 191, 0.1); }
+  table tr:first-of-type {
+    background: #5d7b92;
+    color: #f9fafb; }
+    table tr:first-of-type th {
+      font-weight: 300;
+      font-size: 0.8em;
+      text-align: left;
+      padding: 0.2em;
+      border-right: 1px solid rgba(192, 204, 213, 0.5); }
 
 /*# sourceMappingURL=index.css.map */
