--- a/front-end/partials/table-view.html
+++ b/front-end/partials/table-view.html
@@ -1,35 +1,6 @@
 <div class="table-view-container" ng-controller="TableViewController as tableViewCtrl">
-<table>
-	<tr>
-		<th>Title</th>
-		<th>Author</th>
-		<th>Year</th>
-		<th>Conference</th>
-	</tr>
-	<tr>
-		<td>Title: Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, laudantium?</td>
-		<td>Author Lorem ipsum dolor.</td>
-		<td>2001</td>
-		<td>Conf Lorem ipsum dolor sit amet.</td>
-	</tr>
-	<tr>
-		<td>Title: Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, laudantium?</td>
-		<td>Author Lorem ipsum dolor.</td>
-		<td>2001</td>
-		<td>Conf Lorem ipsum dolor sit amet.</td>
-	</tr>
-	<tr>
-		<td>Title: Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, laudantium?</td>
-		<td>Author Lorem ipsum dolor.</td>
-		<td>2001</td>
-		<td>Conf Lorem ipsum dolor sit amet.</td>
-	</tr>
-	<tr>
-		<td>Title: Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, laudantium?</td>
-		<td>Author Lorem ipsum dolor.</td>
-		<td>2001</td>
-		<td>Conf Lorem ipsum dolor sit amet.</td>
-	</tr>
-</table>
-</div>
 
+<div ui-grid="gridOptions" class="grid" ui-grid-resize-columns ui-grid-move-columns></div>
+
+
+</div>
