--- a/front-end/sass/index.scss
+++ b/front-end/sass/index.scss
@@ -12,9 +12,11 @@ $color-border-table:rgba(#c0ccd5,0.5);
 
 $z-main:0;
 $z-sidebar:1;
+$z-header:2;
 
-$search-bar-width:20%;
-$info-bar-width:20%;
+$search-bar-width:15%;
+$info-bar-width:25%;
+$header-bar-height:6%;
 
 @mixin border($direction, $color){
 	border-#{$direction}:1px solid $color;
@@ -49,25 +51,36 @@ body{
 
 .info-bar{
 	position:absolute;
-	left:0;
+	right:0;
 	top:0;
 	z-index:$z-sidebar;
-	width:$search-bar-width;
+	width:$info-bar-width;
 	height:100%;	
 }
 
 .search-bar{
 	position:absolute;
-	right:0;
+	left:0;
 	top:0;
 	z-index:$z-sidebar;
 	width:$search-bar-width;
 	height:100%;
 }
 
+.table-view-container{
+	width:100%;
+	height:100%;	
+
+	.table-header{
+		background:$color-primary;
+		width:100%;
+		height:$header-bar-height;
+	}
+}
+
 .grid{
 	width:100%;
-	height:auto;
+	height:100% - $header-bar-height;
 }
 
 .ui-grid{
@@ -109,63 +122,81 @@ body{
 	}
 }
 
-/* .gridStyle {
-    border: 1px solid rgb(212,212,212);
-    width: 400px; 
-    height: 300px
-}
+.info-bar{
+	.tab-container{
+		position:absolute;
+		top:0;
+		right:0;
+		z-index:$z-header;
 
+		display:flex;
+		width:100%;
+		height:$header-bar-height;
 
-table{
-	width:100%;
+		background:$color-primary;
 
-	border-spacing:0px;
-	
+		.tab{
+			display:flex;
+			align-items:center;
 
-	color:$color-text-primary;
-	font-weight:300;
-	td{
-		border-right:1px solid $color-border-table;
-		
-		padding:0.5em 0;
+			flex:1;		
 
-		text-indent:0.5em;
+			color:$color-text-revert;
+			font-size:0.8em;
 
-		text-overflow:ellipsis;
-		white-space:nowrap;
-		overflow:hidden;		
-		
+			cursor:pointer;
+
+			&:hover{
+				background:$color-highlight;
+			}
+
+			span{
+				width:100%;
+				text-align:center;
+			}
+		}
 	}
 
-	th{
+	.content-container{
+		position:absolute;
+		top:$header-bar-height;
+		right:0;
+
+		height:100% - $header-bar-height;		
+
+		color:$color-text-primary;
 		font-weight:300;
-		font-size:0.8em;
-		text-align:left;					
-		border-right:1px solid $color-border-table;
-		
-		padding:0.3em;		
-		text-indent:0.525em;
+
+		box-shadow: 5px 0px 30px 0px rgba(0,0,0,0.5);
+
+		h1{
+			font-weight:inherit;
+			font-size:1.2em;
+			margin:1em;
+		}
+
+		section{
+			margin: 1em;
+		}
+
+		h2{
+			font-weight:500;
+			font-size:0.8em;
+			color:$color-text-fade;			
+		}		
+
+		p{
+			margin:0.5em;
+		}
+
+		.tag{
+			display:inline-block;
+			background:$color-secondary;
+			color:$color-text-revert;
+			padding:0.5em;
+			margin:0 0.5em 0.5em 0;
+			font-size:0.8em;
+		}
+
 	}
-
-	tr:nth-of-type(even){
-		background:$color-background-table;
-	}
-
-	tr:nth-of-type(odd){
-		background:$color-background-table-secondary;
-	}
-
-	tr:first-of-type{
-		background:$color-secondary;
-		color:$color-text-revert;
-	}
-
-	
-
-	tr.active{
-		background:$color-highlight;
-		color:$color-text-revert;
-	}
-
-
-} */
+}
