--- a/front-end/css/index.css
+++ b/front-end/css/index.css
@@ -13,18 +13,10 @@ body {
 
 .globalContainer {
   position: absolute;
-  left: 15%;
+  left: 20%;
   top: 0;
   z-index: 0;
   width: 60%;
-  height: 100%; }
-
-.info-bar {
-  position: absolute;
-  right: 0;
-  top: 0;
-  z-index: 1;
-  width: 25%;
   height: 100%; }
 
 .search-bar {
@@ -32,7 +24,7 @@ body {
   left: 0;
   top: 0;
   z-index: 1;
-  width: 15%;
+  width: 20%;
   height: 100%; }
 
 .table-view-container {
@@ -68,53 +60,61 @@ body {
   .ui-grid .ui-grid-header-cell {
     border-color: rgba(192, 204, 213, 0.5); }
 
-.info-bar .tab-container {
+.info-bar {
   position: absolute;
+  right: 0;
   top: 0;
-  right: 0;
-  z-index: 2;
-  display: flex;
-  width: 100%;
-  height: 6%;
-  background: #334e5f; }
-  .info-bar .tab-container .tab {
+  z-index: 1;
+  width: 20%;
+  height: 100%; }
+  .info-bar .tab-container {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 2;
     display: flex;
-    align-items: center;
-    flex: 1;
-    color: #f9fafb;
-    font-size: 0.8em;
-    cursor: pointer; }
-    .info-bar .tab-container .tab:hover {
-      background: #6ba7d5; }
-    .info-bar .tab-container .tab span {
-      width: 100%;
-      text-align: center; }
-.info-bar .content-container {
-  position: absolute;
-  top: 6%;
-  right: 0;
-  height: 94%;
-  color: #334e5f;
-  font-weight: 300;
-  box-shadow: 5px 0px 30px 0px rgba(0, 0, 0, 0.5); }
-  .info-bar .content-container h1 {
-    font-weight: inherit;
-    font-size: 1.2em;
-    margin: 1em; }
-  .info-bar .content-container section {
-    margin: 1em; }
-  .info-bar .content-container h2 {
-    font-weight: 500;
-    font-size: 0.8em;
-    color: rgba(96, 123, 141, 0.5); }
-  .info-bar .content-container p {
-    margin: 0.5em; }
-  .info-bar .content-container .tag {
-    display: inline-block;
-    background: #5d7b92;
-    color: #f9fafb;
-    padding: 0.5em;
-    margin: 0 0.5em 0.5em 0;
-    font-size: 0.8em; }
+    width: 100%;
+    height: 6%;
+    background: #334e5f; }
+    .info-bar .tab-container .tab {
+      display: flex;
+      align-items: center;
+      flex: 1;
+      color: #f9fafb;
+      font-size: 0.8em;
+      cursor: pointer; }
+      .info-bar .tab-container .tab:hover {
+        background: #6ba7d5; }
+      .info-bar .tab-container .tab span {
+        width: 100%;
+        text-align: center; }
+  .info-bar .content-container {
+    position: absolute;
+    top: 6%;
+    right: 0;
+    height: 94%;
+    overflow: scroll;
+    color: #334e5f;
+    font-weight: 300;
+    box-shadow: 5px 0px 30px 0px rgba(0, 0, 0, 0.5); }
+    .info-bar .content-container h1 {
+      font-weight: inherit;
+      font-size: 1.2em;
+      margin: 1em; }
+    .info-bar .content-container section {
+      margin: 1em; }
+    .info-bar .content-container h2 {
+      font-weight: 500;
+      font-size: 0.8em;
+      color: rgba(96, 123, 141, 0.5); }
+    .info-bar .content-container p {
+      margin: 0.5em; }
+    .info-bar .content-container .tag {
+      display: inline-block;
+      background: #5d7b92;
+      color: #f9fafb;
+      padding: 0.5em;
+      margin: 0 0.5em 0.5em 0;
+      font-size: 0.8em; }
 
 /*# sourceMappingURL=index.css.map */
