--- a/front-end/js/components/search-bar/search-bar.html
+++ b/front-end/js/components/search-bar/search-bar.html
@@ -1,3 +1,27 @@
-<div class="search-bar">
-	Search-bar
+<div class="search-bar">	
+	<div class="collection-container">
+		<section>
+			<h2>My Library</h2>
+			<span class="count">293</span>
+		</section>
+		<section>
+			<h2>Collection</h2>
+			<span class="count">1</span>
+		</section>
+		<section>
+			<h3>Thesis</h3>
+			<span class="count">19</span>
+		</section>
+		<section>
+			<h3>Projects</h3>
+			<span class="count">30</span>
+		</section>
+		<section>
+			<h3>Research</h3>
+			<span class="count">7</span>
+		</section>
+	</div>
+	<div class="search-container">
+		<div class="search-button"></div>
+	</div>
 </div>
