--- a/front-end/sass/index.scss
+++ b/front-end/sass/index.scss
@@ -39,99 +39,41 @@ body{
 	background:$color-background;
 
 }
-.globalContainer{
+
+
+.view-container{
 	position:absolute;
 	left:$search-bar-width;
-	top:0;
+	top:$header-bar-height;
 	z-index:$z-main;
 
 	width:100% - $search-bar-width - $info-bar-width;
-	height:100%;	
-}
-
-.search-bar{
-	position:absolute;
-	left:0;
-	top:0;
-	z-index:$z-sidebar;
-	width:$search-bar-width;
-	height:100%;
-}
-
-.table-view-container{
-	width:100%;
-	height:100%;	
-
-	.table-header{
-		background:$color-primary;
-		width:100%;
-		height:$header-bar-height;
-	}
-}
-
-.grid{
-	width:100%;
 	height:100% - $header-bar-height;
 }
 
-.ui-grid{
-	font-weight:300;
-	border:0;
-	
-	.ui-grid-top-panel{	
-		background:$color-secondary;
-		color:$color-text-revert;
-		font-weight:inherit;
-	}
-
-	.ui-grid-row{
-		color:$color-text-primary;
-
-
-		&:nth-child(odd) .ui-grid-cell{
-			background:$color-background-table;
-		}
-
-		&:nth-child(even) .ui-grid-cell{
-			background:$color-background-table-secondary;
-		}
-
-		.ui-grid-cell.active{
-			background-color:$color-highlight;	
-			color:$color-text-revert;
-		}
-
-		.ui-grid-cell{
-			border-color:$color-border-table;
-		}
-
-		
-	}
-
-	.ui-grid-header-cell{
-		border-color:$color-border-table;	
-	}
-}
-
-.info-bar{
+header{
 	position:absolute;
-	right:0;
 	top:0;
-	z-index:$z-sidebar;
-	width:$info-bar-width;
-	height:100%;		
+	left:0;
+	z-index:$z-header;
+	
+	width:100%;
+	height:$header-bar-height;
 
-	.tab-container{
+	background:$color-primary;
+	
+		.tab-container{
 		position:absolute;
 		top:0;
 		right:0;
 		z-index:$z-header;
 
 		display:flex;
-		width:100%;
-		height:$header-bar-height;
+		width:$info-bar-width;
+		height:100%;
 
 		background:$color-primary;
+		list-style:none;
 
 		.tab{
 			display:flex;
@@ -155,12 +97,75 @@ body{
 		}
 	}
 
-	.content-container{
-		position:absolute;
-		top:$header-bar-height;
-		right:0;
+}
 
-		height:100% - $header-bar-height;	
+
+.table-view-container{
+	width:100%;
+	height:100%;	
+
+	.grid{
+		width:100%;
+		height:100%;
+	}
+
+	.ui-grid{
+		font-weight:300;
+		border:0;
+
+		.ui-grid-top-panel{	
+			background:$color-secondary;
+			color:$color-text-revert;
+			font-weight:inherit;
+		}
+
+		.ui-grid-row{
+			color:$color-text-primary;
+
+
+			&:nth-child(odd) .ui-grid-cell{
+				background:$color-background-table;
+			}
+
+			&:nth-child(even) .ui-grid-cell{
+				background:$color-background-table-secondary;
+			}
+
+			.ui-grid-cell.active{
+				background-color:$color-highlight;	
+				color:$color-text-revert;
+			}
+
+			.ui-grid-cell{
+				border-color:$color-border-table;
+			}
+
+
+		}
+
+		.ui-grid-header-cell{
+			border-color:$color-border-table;	
+		}
+	}
+
+}
+
+
+
+.info-bar{
+	position:absolute;
+	right:0;
+	top: $header-bar-height;
+	z-index:$z-sidebar;
+	width:$info-bar-width;
+	height:100% - $header-bar-height;		
+
+
+
+	.content-container{		
+
+		height:100%;	
+		width:100%;
 		overflow:scroll;	
 
 		color:$color-text-primary;
@@ -198,4 +203,17 @@ body{
 		}
 
 	}
+}
+
+.search-bar{
+	position:absolute;
+	top:$header-bar-height;
+	left:0;
+
+	width:$search-bar-width;
+	height: 100% - $header-bar-height;
+
+	background:lightgray;
+
+	
 }
