--- a/front-end/css/index.css
+++ b/front-end/css/index.css
@@ -13,10 +13,10 @@ body {
 
 .view-container {
   position: absolute;
-  left: 20%;
+  left: 15%;
   top: 6%;
   z-index: 0;
-  width: 60%;
+  width: 65%;
   height: 94%; }
 
 header {
@@ -83,14 +83,14 @@ header {
   top: 6%;
   z-index: 1;
   width: 20%;
-  height: 94%; }
+  height: 94%;
+  box-shadow: 5px 0 30px 0px rgba(0, 0, 0, 0.5); }
   .info-bar .content-container {
     height: 100%;
     width: 100%;
     overflow: scroll;
     color: #334e5f;
-    font-weight: 300;
-    box-shadow: 5px 0px 30px 0px rgba(0, 0, 0, 0.5); }
+    font-weight: 300; }
     .info-bar .content-container h1 {
       font-weight: inherit;
       font-size: 1.2em;
@@ -115,8 +115,102 @@ header {
   position: absolute;
   top: 6%;
   left: 0;
-  width: 20%;
+  width: 15%;
   height: 94%;
-  background: lightgray; }
+  background: color-background;
+  color: #334e5f;
+  box-shadow: -5px 0 30px 0px rgba(0, 0, 0, 0.5); }
+  .search-bar h2 {
+    font-weight: 300;
+    font-size: 1.2em; }
+  .search-bar .container {
+    padding: 0.5em 0; }
+
+.collection-container {
+  border-bottom: 1px solid rgba(192, 204, 213, 0.5); }
+  .collection-container section {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.5em 1em; }
+    .collection-container section.collection {
+      padding-left: 2em; }
+  .collection-container .count {
+    float: right;
+    font-size: 0.8em;
+    font-weight: 300;
+    color: #5d7b92; }
+  .collection-container h2 {
+    float: left; }
+  .collection-container h3 {
+    font-weight: 300;
+    font-size: 0.8em; }
+
+.search-container section {
+  padding: 1em; }
+.search-container .search-button {
+  width: 70%;
+  height: 15px;
+  margin: 1em auto;
+  padding: 8px 0;
+  background: #6ba7d5; }
+  .search-container .search-button div {
+    width: 100%;
+    height: 100%;
+    background: url("../resources/search-icon.png") no-repeat center;
+    background-size: contain; }
+.search-container .condition {
+  position: relative;
+  border-top: 1px solid rgba(192, 204, 213, 0.3); }
+  .search-container .condition:hover .delete-button {
+    opacity: 1;
+    pointer-events: auto; }
+  .search-container .condition select, .search-container .condition input {
+    color: #334e5f;
+    -webkit-transition: background 0.3s; }
+    .search-container .condition select:hover, .search-container .condition input:hover {
+      background: rgba(96, 123, 141, 0.1); }
+    .search-container .condition select:focus, .search-container .condition input:focus {
+      outline: 0;
+      background: rgba(96, 123, 141, 0.3); }
+  .search-container .condition input {
+    padding: 0.5em;
+    width: 100%;
+    background: transparent;
+    border-bottom: 1px solid rgba(192, 204, 213, 0.3); }
+  .search-container .condition .delete-button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 7px;
+    opacity: 0;
+    pointer-events: none;
+    -webkit-transition: background 0.3s, opacity 0.3s; }
+    .search-container .condition .delete-button:hover {
+      background: rgba(96, 123, 141, 0.1); }
+    .search-container .condition .delete-button > div {
+      width: 10px;
+      height: 10px;
+      background: url("../resources/delete-icon.png");
+      background-size: contain; }
+.search-container .add-container {
+  display: flex;
+  align-items: center;
+  padding: 0.5em 1em;
+  cursor: pointer;
+  -webkit-transition: background 0.3s; }
+  .search-container .add-container:hover {
+    background: rgba(96, 123, 141, 0.1); }
+  .search-container .add-container .add-button {
+    display: inline-block;
+    padding: 7px; }
+    .search-container .add-container .add-button > div {
+      width: 10px;
+      height: 10px;
+      background: url("../resources/add-icon.png");
+      background-size: contain; }
+  .search-container .add-container span {
+    font-size: 0.8em;
+    color: rgba(96, 123, 141, 0.5); }
 
 /*# sourceMappingURL=index.css.map */
