--- a/front-end/css/index.css
+++ b/front-end/css/index.css
@@ -43,6 +43,7 @@ header {
       flex: 1;
       color: #f9fafb;
       font-size: 0.8em;
+      -webkit-transition: background 0.3s;
       cursor: pointer; }
       header .tab-container .tab:hover {
         background: #6ba7d5; }
@@ -109,7 +110,11 @@ header {
       color: #f9fafb;
       padding: 0.5em;
       margin: 0 0.5em 0.5em 0;
-      font-size: 0.8em; }
+      font-size: 0.8em;
+      -webkit-transition: background 0.3s;
+      cursor: pointer; }
+      .info-bar .content-container .tag:hover {
+        background: #6ba7d5; }
 
 .search-bar {
   position: absolute;
@@ -132,7 +137,11 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0.5em 1em; }
+    padding: 0.5em 1em;
+    -webkit-transition: background 0.3s;
+    cursor: pointer; }
+    .collection-container section:hover {
+      background: rgba(96, 123, 141, 0.1); }
     .collection-container section.collection {
       padding-left: 2em; }
   .collection-container .count {
@@ -153,7 +162,11 @@ header {
   height: 15px;
   margin: 1em auto;
   padding: 8px 0;
-  background: #6ba7d5; }
+  background: #5d7b92;
+  -webkit-transition: background 0.3s;
+  cursor: pointer; }
+  .search-container .search-button:hover {
+    background: #6ba7d5; }
   .search-container .search-button div {
     width: 100%;
     height: 100%;
@@ -167,7 +180,9 @@ header {
     pointer-events: auto; }
   .search-container .condition select, .search-container .condition input {
     color: #334e5f;
-    -webkit-transition: background 0.3s; }
+    -webkit-transition: background 0.3s;
+    cursor: pointer;
+    cursor: auto; }
     .search-container .condition select:hover, .search-container .condition input:hover {
       background: rgba(96, 123, 141, 0.1); }
     .search-container .condition select:focus, .search-container .condition input:focus {
@@ -185,6 +200,7 @@ header {
     padding: 7px;
     opacity: 0;
     pointer-events: none;
+    cursor: pointer;
     -webkit-transition: background 0.3s, opacity 0.3s; }
     .search-container .condition .delete-button:hover {
       background: rgba(96, 123, 141, 0.1); }
@@ -197,8 +213,8 @@ header {
   display: flex;
   align-items: center;
   padding: 0.5em 1em;
-  cursor: pointer;
-  -webkit-transition: background 0.3s; }
+  -webkit-transition: background 0.3s;
+  cursor: pointer; }
   .search-container .add-container:hover {
     background: rgba(96, 123, 141, 0.1); }
   .search-container .add-container .add-button {
