--- a/front-end/sass/index.scss
+++ b/front-end/sass/index.scss
@@ -35,6 +35,14 @@ $time-transition:0.3s;
 	-webkit-transition:$prop $time;
 }
 
+@mixin clickable($hover-color:$color-highlight){
+	@include transition(background);
+	cursor:pointer;
+	&:hover{
+		background:$hover-color;
+	}
+}
+
 
 *{
 	margin:0;
@@ -97,11 +105,7 @@ header{
 			color:$color-text-revert;
 			font-size:0.8em;
 
-			cursor:pointer;
-
-			&:hover{
-				background:$color-highlight;
-			}
+			@include clickable;
 
 			span{
 				width:100%;
@@ -213,6 +217,8 @@ header{
 			padding:0.5em;
 			margin:0 0.5em 0.5em 0;
 			font-size:0.8em;
+
+			@include clickable;
 		}
 
 	}
@@ -253,6 +259,8 @@ header{
 		
 		padding:0.5em 1em;		
 
+		@include clickable($color-background-hover);
+		
 		&.collection{
 			padding-left:2em;
 		}	
@@ -289,7 +297,9 @@ header{
 
 		margin:1em auto;
 		padding:8px 0;
-		background:$color-highlight;
+		background:$color-secondary;
+
+		@include clickable;
 
 		div{
 			width:100%;
@@ -312,11 +322,10 @@ header{
 
 		select,input{
 			color:$color-text-primary;
-			@include transition(background);
 			
-			&:hover{				
-				background:$color-background-hover;
-			}
+			@include clickable($color-background-hover);
+			cursor:auto;
+			
 			&:focus{
 				outline:0;
 				background:$color-background-focus;
@@ -342,6 +351,8 @@ header{
 			opacity:0;
 			pointer-events:none;
 
+			cursor:pointer;
+
 			-webkit-transition:background $time-transition, opacity $time-transition;
 
 			&:hover{
@@ -365,13 +376,8 @@ header{
 		display:flex;
 		align-items:center;
 		padding:0.5em 1em;
-		cursor:pointer;
 
-		@include transition(background);
-
-		&:hover{
-			background:$color-background-hover;
-		}
+		@include clickable($color-background-hover);
 
 		.add-button{
 			display:inline-block;
