--- a/front-end/sass/index.scss
+++ b/front-end/sass/index.scss
@@ -225,6 +225,9 @@ header{
 }
 
 .search-bar{
+	display:flex;
+	flex-direction:column;
+
 	position:absolute;
 	top:$header-bar-height;
 	left:0;
@@ -240,16 +243,14 @@ header{
 	h2{	
 		font-weight:300;
 		font-size:1.2em;		
-	}
-
-	.container{
-		padding:0.5em 0;
-	}
+	}	
 
 }
 
 .collection-container{
-	
+	flex:none;		
+
+	padding:0.5em 0;
 	@include border(bottom,$color-border);
 
 	section{
@@ -283,19 +284,20 @@ header{
 	}
 }
 
-.search-container{	
+.button-container{
+	flex:none;
+	padding:0.5em 0;
+	@include border(bottom,$color-border);
 
-	section{
-		padding:1em;
+	h2{
+		margin-left:1em;
 	}
 
 	.search-button{
-		
-
 		width:70%;
 		height:15px;
 
-		margin:1em auto;
+		margin:1em auto 0.5em auto;
 		padding:8px 0;
 		background:$color-secondary;
 
@@ -309,9 +311,14 @@ header{
 			background-size:contain;
 		}
 	}
+}
+.condition-container{
+	overflow:scroll;	
 
 	.condition{
 		position:relative;
+
+		padding:1em;
 
 		@include border(top,$color-border-fade);				
 
@@ -376,6 +383,7 @@ header{
 		display:flex;
 		align-items:center;
 		padding:0.5em 1em;
+		margin-bottom:0.5em;
 
 		@include clickable($color-background-hover);
 
