Add controller for tabs

--- a/front-end/js/components/header-bar/header-bar.html
+++ b/front-end/js/components/header-bar/header-bar.html
@@ -1,9 +1,9 @@
 <header>
 	<ul class="tab-container">
-		<li class="tab"><span>Detail</span></li>
+		<li class="tab" ng-repeat="tab in headerCtrl.tabs" ng-class="{active:headerCtrl.isCurrentTab($index)}" ng-click="headerCtrl.setTab($index)"><span>{{tab}}</span></li>
+		<!-- <li class="tab"><span>Detail</span></li>
 		<li class="tab"><span>Notes</span></li>
 		<li class="tab"><span>Reference</span></li>
-		<li class="tab"><span>Cited by</span></li>
+		<li class="tab"><span>Cited by</span></li> -->
 	</ul>
-
 </header>
