--- a/front-end/css/index.css
+++ b/front-end/css/index.css
@@ -47,6 +47,8 @@ header {
       cursor: pointer; }
       header .tab-container .tab:hover {
         background: #6ba7d5; }
+      header .tab-container .tab.active {
+        background: #6ba7d5; }
       header .tab-container .tab span {
         width: 100%;
         text-align: center; }
@@ -85,26 +87,26 @@ header {
   z-index: 1;
   width: 20%;
   height: 94%;
+  font-weight: 300;
   box-shadow: 5px 0 30px 0px rgba(0, 0, 0, 0.5); }
-  .info-bar .content-container {
+  .info-bar h1 {
+    font-weight: inherit;
+    font-size: 1.2em;
+    margin: 1em; }
+  .info-bar .detail-container {
     height: 100%;
     width: 100%;
     overflow: scroll;
-    color: #334e5f;
-    font-weight: 300; }
-    .info-bar .content-container h1 {
-      font-weight: inherit;
-      font-size: 1.2em;
+    color: #334e5f; }
+    .info-bar .detail-container section {
       margin: 1em; }
-    .info-bar .content-container section {
-      margin: 1em; }
-    .info-bar .content-container h2 {
+    .info-bar .detail-container h2 {
       font-weight: 500;
       font-size: 0.8em;
       color: rgba(96, 123, 141, 0.5); }
-    .info-bar .content-container p {
+    .info-bar .detail-container p {
       margin: 0.5em; }
-    .info-bar .content-container .tag {
+    .info-bar .detail-container .tag {
       display: inline-block;
       background: #5d7b92;
       color: #f9fafb;
@@ -113,7 +115,7 @@ header {
       font-size: 0.8em;
       -webkit-transition: background 0.3s;
       cursor: pointer; }
-      .info-bar .content-container .tag:hover {
+      .info-bar .detail-container .tag:hover {
         background: #6ba7d5; }
 
 .search-bar {
