--- a/front-end/js/components/info-bar/info-bar.html
+++ b/front-end/js/components/info-bar/info-bar.html
@@ -1,5 +1,5 @@
 <div class="info-bar">
-	<div class="content-container">
+	<div class="detail-container" ng-show="globalCtrl.tabIndex == 0">
 		<h1>{{infoBarCtrl.entity.title}}</h1>
 		<section>
 			<h2>Authors</h2>
@@ -23,5 +23,8 @@
 			<h2>Abstract</h2>
 			<p>{{infoBarCtrl.entity.abstract}}</p>
 		</section>
+	</div>
+	<div class="note-container" ng-show="globalCtrl.tabIndex == 1">
+		<h1>Notes</h1>
 	</div>
 </div>
